# basics

./: CMakeLists.txt
src/: main.cpp
